plugins {
	id 'org.springframework.boot' version '2.4.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'com.suaki'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

tasks.withType(JavaCompile).all {
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
	jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	annotationProcessor 'org.projectlombok:lombok'

	implementation "io.vavr:vavr:0.10.3"
	implementation "io.vavr:vavr-jackson:0.10.3"

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	compileOnly 'org.projectlombok:lombok'

	runtimeOnly 'com.h2database:h2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
}
